--- a/Views/Shared/Edit_Customer_Modal.cshtml
+++ b/Views/Shared/Edit_Customer_Modal.cshtml
@@ -13,7 +13,7 @@
                 <div class="x_panel">
 
                     <div class="win text-center" id="edit_customers">
-                        <h3 class="black-color"><b>Edit Customer</b></h3>
+                        <h3 class="black-color"><b>Edit</b></h3>
                         <img class="pull-right margin-supplier ml-22" src="~/img/images/customer.png" />
                     </div>
 
