--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,7 +18,10 @@
     @*<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>*@
     @*<script src="~/scripts/purchase/bootstrap.min.js"></script>*@
 
-
+    <!-- Date Picker JS & CSS -->
+    <script src="~/scripts/date_picker/bootstrap-datepicker.min.js"></script>
+    <link href="~/scripts/date_picker/bootstrap-datepicker3.min.css" rel="stylesheet" />
+    <!-- Date Picker JS & CSS -->
 
     <link rel="stylesheet" href="~/Content/css/sweet-alert.min.css" />
     <link href="~/content/css/sweetalert.css" rel="stylesheet" />
@@ -55,7 +58,7 @@
     <script src="~/scripts/js/scripts.js"></script>
     <script src="~/scripts/new-js/jquery.datatables.min.js"></script>
 
-
+    <script src="~/Scripts/Customer/Postcode_Customers.js"></script>
 
 </head>
 <body>
