--- a/Views/Customer/Customer_List.cshtml
+++ b/Views/Customer/Customer_List.cshtml
@@ -102,11 +102,34 @@
 
 
 
-                        <div class="col-md-12 mt-20" id="customer_table_div">
+                        <div class="col-md-12 mt-20" id="customer_table_div" style="display:none">
+                            <table class="table table-responsive border_black" id="chuss">
+                                <thead>
+                                    <tr class="table-heading-fonts table-main-headings">
+                                        @*<th class="text-center">ID</th>*@
+                                        <th class="text-center">Name</th>
+                                        <th class="text-center">Company Name</th>
+                                        <th class="text-center">Phone</th>
+                                        <th class="text-center">Email</th>
+                                        <th class="text-center">Address</th>
+                                        <th class="text-center">Status</th>
 
+                                        @*<th>Pay Rate</th>
+                        <th>Role</th>
+                        <th>Status</th>*@
+
+                                        <th class="text-center">Actions</th>
+                                    </tr>
+                                </thead>
+
+                                <tbody class="black-color bold" id="updated_customer_list"></tbody>
+
+
+                            </table>
                         </div>
 
                         <div class="clearfix"></div>
+
                         <div id="customer_summary_loading_hide">
 
                             @{
@@ -134,6 +157,9 @@
         }
     </footer>
 
+    <script src="~/Scripts/Customer/Customer_List.js"></script>
+    <script src="~/scripts/customer_summary/customer_summary.js"></script>
+    <script src="~/Scripts/Customer/Edit_Customers.js"></script>
 
     @*----------------------------POP UP for CUSTOMER SUMMARY--------------------------------*@
 
@@ -199,7 +225,7 @@
 
     @*----------------------------POP UP for VIEW PAYMENT STATUS--------------------------------*@
 
-    <div class="modal fade" id="View_Payment_Status_Modal" tabindex="-1" role="dialog" aria-hidden="false">
+    @*<div class="modal fade" id="View_Payment_Status_Modal" tabindex="-1" role="dialog" aria-hidden="false">
         <div class="modal-dialog modal-lg">
             <div class="modal-content modal-style-custom">
 
@@ -302,7 +328,7 @@
 
             </div>
         </div>
-    </div>
+    </div>*@
 
     @*----------------------------POP UP END VIEW PAYMENT STATUS--------------------------------*@
 
@@ -329,88 +355,18 @@
     @*<script src="~/scripts/customer/customer_list.js"></script>*@
 
 
-    <script src="~/scripts/customer_summary/customer_summary.js"></script>
+    
+
+    
 
     
 
     <script>
-
-        function Custom_List() {
-            //alert("CUSTOM_LIST")
-
-            $("#loader_div").show();
-            $("#customer_table_div").hide();
-            $("#customer_summary").hide();
-            var type_ID = document.getElementById("customer_type_dropdown").value;
-            //alert(type_ID)
-
-            $.ajax({
-
-                url: '/Customer/Customer_List_Custom/',
-                data: { customer_type_id: type_ID },
-                cache: false,
-                type: 'GET',
-                success: function (data) {
-                    //alert("Success");
-                    //alert(data);
-                    $("#customer_table_div").show();
-                    $("#loader_div").hide();
-                    document.getElementById('customer_table_div').innerHTML = data;
-                    $('#customer_list_table').dataTable();
-
-                },
-                error: function (response) {
-                    //alert("Error");
-                }
-
-            })
-        }
-
-        
-
-    </script>
-
-    <script>
-        function delete_customer(ID) {
-
-            if (ID == -1) {
-                ID = document.getElementById("customer_id").value;
-            }
-
-            //alert("ID" + ID);
-
-            $.ajax({
-                url: "/Customer/Delete_Customer/",
-                data: { id: ID },
-                cache: false,
-                type: "Get",
-
-                success: function (data) {
-                    //alert("ok");
-                    document.getElementById("updated_customer_list").innerHTML = data;
-                    $('#customer_list_table').dataTable();
-                },
-                error: function () {
-                    //alert("FAILURE");
-                }
-            });
-        }
-
-
-
-
-    </script>
-
-
-
-
-
-    <script>
-        $(document).ready(function () {
-            $('#customer_summary_table').dataTable();
-            $('#item_history_table').dataTable();
-            $('#customer_invoices_table').dataTable();
-        });
+        //$(document).ready(function () {
+        //    $('#customer_summary_table').dataTable();
+        //    $('#item_history_table').dataTable();
+        //    $('#customer_invoices_table').dataTable();
+        //});
 
     </script>
 
