--- a/Views/Customer/Edit_Customers.cshtml
+++ b/Views/Customer/Edit_Customers.cshtml
@@ -103,16 +103,24 @@
                     </div>
                 </div>
 
-
                 <div class="form-group">
                     <label class="customer-create-texts" for="middle-name">Credit Limit<span class="required">*</span></label>
                     <div class="col-md-3 col-sm-6 col-xs-12">
-                        <input type="text" name="credit_limit" value="@Model.Credit_Limit" required>
+                        <input type="text" id="new_credit_limit_entered_" name="credit_limit" value="@Model.Credit_Limit_Old" required onkeypress="validate(event)" onchange="abc123()">
+                    </div>
+                </div>
+
+
+                <div class="form-group">
+                    <label class="customer-create-texts" for="middle-name">Available Credit Limit<span class="required">*</span></label>
+                    <div class="col-md-3 col-sm-6 col-xs-12">
+                        <input type="text" id="available_credit_limit_" name="" disabled value="@Model.Credit_Limit" required>
                     </div>
                 </div>
             </div>
 
-
+            <input id="old_credit_limit_" hidden value="@Model.Credit_Limit_Old" text/>
+            <input id="check_edit_click" type="text" hidden/>
 
             <div class="col-md-6">
 
@@ -165,8 +173,8 @@
                     <div class="form-group">
                         <label class="customer-create-texts width-178" for="middle-name">Postcode<span class="required">*</span></label>
                         <div class="col-md-3 col-sm-6 col-xs-12">
-                            <input class="ml--50" type="text" name="shipping_postcode" id="shipping_postcode_edit" value="@Model.Shipping_Postcode">
-                            <a href="#"><img src="~/img/images/ssearch.png" id="input_img" /></a>
+                            <input class="ml--50" type="text" name="shipping_postcode" id="shipping_postcode_edit" value="@Model.Shipping_Postcode" onkeypress="Postcode_Shipping_Enter_Click_Edit(event)">
+                            <a href="#" onclick="shipping_postcode_testing_edit()"><img src="~/img/images/ssearch.png" id="input_img" /></a>
                         </div>
                     </div>
 
@@ -204,7 +212,7 @@
             <div class="col-md-3"></div>
 
             <div class="col-md-3">
-                <input type="submit" value="Edit" class="btn btn-success btn-mini center-block width-145" />
+                <input type="submit" value="Edit" onclick="return click_check()" class="btn btn-success btn-mini center-block width-145" />
             </div>
 
             <div class="col-md-3">
@@ -372,6 +380,180 @@
 
                             <div class="col-md-6">
                                 <input type="button" onclick="House_no_Postcode_Edit_Supplier()" value="Add" class="btn btn-success btn-mini center-block width-95">
+                            </div>
+
+
+
+
+                            <div class="col-md-3"></div>
+                            @*<input type="button" value="Cancel" class="btn btn-primary btn-mini center-block width-95" onclick="close_modal()">*@
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="modal-footer"></div>
+            <div class=""></div>
+
+        </div>
+    </div>
+</div>
+
+
+@*----------------------------POP UP for EDIT CUSTOMER POSTCODE HOUSE NUMBER--------------------------------*@
+
+
+
+
+
+
+
+
+
+<!------------------------------------------------------------------------------------------------------------>
+
+
+@*----------------------------POP UP for EDIT CUSTOMER POSTCODE CONFIRMATION--------------------------------*@
+
+<div style="z-index:9999" class="modal fade" id="Postcode_Shipping_Confirmation_Edit" tabindex="-1" role="dialog" aria-hidden="false">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content modal-style-custom">
+
+            <div class="title col-md-12">
+                <span>asasasas</span>
+                <img src="~/img/images/c3.png" class="close mr--13 pull-right" onclick="close_customer_postcode_shipping()" />
+            </div>
+
+            <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="x_panel">
+
+                    <div id="" class="black-color">
+                        <div class="empty-height"></div><div class="empty-height"></div>
+                        <div class="text-center"><p class="color"><b>Please confirm below address <br />If correct, press ok</b></p></div>
+
+                        <div class="empty-height"></div><div class="empty-height"></div>
+
+                        <div class="text-center italic">
+                            <label id="street_postcode_shipping_edit_customer"></label><br />
+                        </div>
+                        <div class="text-center italic">
+                            <label id="town_postcode_shipping_edit_customer"></label><br />
+                        </div>
+                        <div class="text-center italic">
+                            <label id="county_postcode_shipping_edit_customer"></label><br />
+                        </div>
+                        <div class="text-center italic">
+                            <label id="country_postcode_shipping_edit_customer"></label><br />
+                        </div>
+                        <div class="text-center italic">
+                            <label id="postcode_shipping_popup_edit_customer"><span> ?</span></label><br />
+                        </div>
+
+
+
+
+
+                        <div class="empty-height"></div>
+
+
+
+
+
+
+                        <div class="col-md-12">
+
+
+                            <div class="col-md-6">
+                                <input type="button" onclick="Add_Shipping_Postcode_Edit_Customer()" value="Add" class="btn btn-success btn-mini center-block width-95">
+                            </div>
+
+
+                            <script>
+
+
+
+                            </script>
+
+
+                            <div class="col-md-6">
+                                <input type="button" value="Cancel" class="btn btn-primary btn-mini center-block width-95" onclick="close_customer_postcode_shipping()">
+                            </div>
+
+
+
+
+                        </div>
+
+
+                        <div class="col-md-12">
+                            <div class="col-md-3"></div>
+
+
+                            <div class="col-md-3"></div>
+
+
+
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="modal-footer"></div>
+            <div class=""></div>
+
+        </div>
+    </div>
+</div>
+
+@*----------------------------POP UP for EDIT CUSTOMER POSTCODE CONFIRMATION--------------------------------*@
+
+
+@*----------------------------POP UP for EDIT CUSTOMER POSTCODE HOUSE NUMBER--------------------------------*@
+
+<div style="z-index:99999" class="modal fade" id="Postcode_Shipping_House_Number_Edit" tabindex="-1" role="dialog" aria-hidden="false">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content modal-style-custom">
+
+            <div class="title col-md-12">
+                <span>Prompt</span>
+                <img src="~/img/images/c3.png" class="close mr--13 pull-right" onclick="close_customer_postcode_shipping()" />
+            </div>
+
+            <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="x_panel">
+
+                    <div id="" class="black-color">
+                        <div class="empty-height"></div>
+                        <div class="empty-height"></div>
+
+                        <div class="text-center italic">
+                            <label id="">Please Enter House Number</label>
+
+                            <input type="text" id="house_number_postcode_shipping_edit_customer" />
+
+                        </div>
+
+                        <div class="empty-height"></div>
+
+
+
+
+
+
+
+
+                        <div class="empty-height"></div>
+                        <div class="empty-height"></div>
+
+                        <div class="col-md-12">
+
+                            <div class="col-md-3"></div>
+
+                            <div class="col-md-6">
+                                <input type="button" onclick="House_no_Postcode_Shipping_Edit()" value="Add" class="btn btn-success btn-mini center-block width-95">
                             </div>
 
 
