--- a/Views/Customer/UpdatedCustomerList.cshtml
+++ b/Views/Customer/UpdatedCustomerList.cshtml
@@ -2,7 +2,7 @@
 
 @foreach (var v in Model)
 {
-    <tr>
+    <tr id="@String.Concat("tr_"+@v.Id)">
         @*<td data-title="User ID">@v.Id</td>*@
         <td class="text-center">@v.Name</td>
         <td class="text-center">@v.phone</td>
