--- a/Views/Report/SaleReport.cshtml
+++ b/Views/Report/SaleReport.cshtml
@@ -1,5 +1,5 @@
 ﻿@model List<eSalesPro.Models.Invoice>
-<body id="body-index">
+<body id="body-index" onload="Loading_Sales_Report()">
     <div id="sticky-footer-wrap">
 
         @{
@@ -31,7 +31,7 @@
 
                             <div class="col-md-12">
 
-                                <div id="loader_div" class="none">
+                                <div id="loader_div" class="">
                                     <img src="~/img/loading.gif" class="ajax_loader">
                                 </div>
 
@@ -98,6 +98,10 @@
                                         <input required type="date" disabled id="to_date" oninput="showDateDiv();findByDate()" class="date-width-height" name="to_date">
                                     </div>
 
+                                    @*<div class="pull-left">
+                                        <a href="#" data-toggle="modal" data-target="#ExistingModal" onclick="show_customer_summary()" class="btn btn-primary height-34 blue-btn-style btn-mini bold pull-right">Search</a>
+                                    </div>*@
+
 
 
 
@@ -155,382 +159,19 @@
                  
 
 
-                        <div id="table_div_Load">
+                        
 
-                            <div class="col-md-12">
-                                <table border="0" class="table table-responsive border_black" id="table_Load">
-                                    <thead>
-                                        <tr class="table-heading-fonts table-main-headings">
-                                            <th class="text-center">Order Id</th>
-                                            <th class="text-center">Customer</th>
-                                            @*<th class="text-center">Customer Type</th>*@
-                                            <th class="text-center">Payment Type</th>
-                                            <th class="text-center">Status</th>
-                                            <th class="text-center">Net</th>
-                                            <th class="text-center">VAT</th>
-                                            <th class="text-center">Gross</th>
-                                            <th class="text-center">Date</th>
-                                            <th class="text-center">Actions</th>
-                                        </tr>
-                                    </thead>
 
-                                    <tbody id="" class="black-color bold">
-                                        @foreach (var v in Model)
-                                        {
-                                            if (v != null)
-                                            {
 
-                                                <tr class="text-center background_blue_selected_at_hover">
 
-                                                    <td class="vertical_align_middle">@v.Invoice_Number</td>
-                                                    <td class="vertical_align_middle">@v.Customer.Name</td>
 
-                                                    @*@if (Model.Count() == null || Model.Count() == 0)
-                                                        {
-                                                            <td>@v.Payment_Methods.Type</td>
-                                                            <td width="15%">@v.Payment_Status.Status</td>
-                                                            <td>@v.Net_Price</td>
-                                                            <td>@v.VAT_20</td>
-                                                            <td>@v.Gross</td>
-                                                            <td width="10%">@v.Created_at.ToString("dd-MMM-yy")</td>
-                                                        }*@
 
-                                                    @*else
-                                                        {*@
 
-                                                    <td>
-                                                        @v.Payment_Methods.Type
 
 
-                                                        @foreach (var sale in v.Sale_Transaction_History)
-                                                        {
-                                                            <br /><span class="sub_tr_values">@sale.Payment_Type</span>
-                                                        }
-                                                    </td>
 
 
-
-
-                                                    <td width="15%">
-
-
-                                                        @v.Payment_Status.Status
-
-                                                        @foreach (var sale in v.Sale_Transaction_History)
-                                                        {
-                                                            <br /><span class="sub_tr_values">@sale.Status</span>
-                                                        }
-                                                    </td>
-
-
-
-
-                                                    <td>
-                                                        @v.Net_Price
-
-                                                        @foreach (var sale in v.Sale_Transaction_History)
-                                                        {
-                                                            <br /><span class="sub_tr_values">@sale.Net_Amount</span>
-                                                        }
-                                                    </td>
-
-
-
-
-                                                    <td>
-                                                        @v.VAT_20
-
-                                                        @foreach (var sale in v.Sale_Transaction_History)
-                                                        {
-                                                            <br /><span class="sub_tr_values">@sale.Vat</span>
-                                                        }
-                                                    </td>
-
-
-                                                    <td>
-                                                        @v.Gross
-
-                                                        @foreach (var sale in v.Sale_Transaction_History)
-                                                        {
-                                                            //{ total = total + sale.Gross; }
-                                                            <br /><span class="sub_tr_values">@sale.Gross</span>
-                                                        }
-
-                                                       
-
-                                                        @*@{total = 0;}*@
-
-                                                       
-                                                    </td>
-
-
-
-
-                                                    <td width="10%">
-                                                        @v.Created_at.ToString("dd-MMM-yy")
-                                                        @*@v.date.ToShortDateString()*@
-
-                                                        @foreach (var sale in v.Sale_Transaction_History)
-                                                        {
-                                                            <br /><span class="sub_tr_values">@sale.Date.ToString("dd-MMM-yy")</span>
-                                                            @*<br /><span class="sub_tr_values">@sale.Date.ToShortDateString()</span>*@
-                                                        }
-                                                    </td>
-
-
-
-
-
-
-                                                    @*}*@
-
-                                                    <td class="text-center width-120" style="vertical-align:middle;">
-
-                                                        <a class="btn btn-sm btn-info bold" href="~/Sale/Edit_Sale/@v.Id">Edit</a>
-                                                        <a class="btn btn-sm btn-danger bold" href="" onclick="Delete_Sale_by_Ajax(@v.Id)">Delete</a>
-                                                    </td>
-
-                                                </tr>
-
-                                            }
-
-                                        }
-                                    </tbody>
-                                </table>
-
-                                <div class="clearfix"></div>
-
-                            </div>
-
-
-
-
-
-                            <div class="clearfix"></div>
-                        </div>
-
-
-
-
-
-
-
-
-
-
-
-                        <div id="date_click_div" style="display:none">
-
-                            <div class="col-md-12">
-                                <table border="0" class="table table-responsive border_black" id="table_on_dates">
-                                    <thead>
-                                        <tr class="table-heading-fonts table-main-headings">
-                                            <th class="text-center">Order Id</th>
-                                            <th class="text-center">Customer</th>
-                                            @*<th class="text-center">Customer Type</th>*@
-                                            <th class="text-center">Payment Type</th>
-                                            <th class="text-center">Status</th>
-                                            <th class="text-center">Net</th>
-                                            <th class="text-center">VAT</th>
-                                            <th class="text-center">Gross</th>
-                                            <th class="text-center">Date</th>
-                                            <th class="text-center">Actions</th>
-                                        </tr>
-                                    </thead>
-                                    
-                                    <tbody id="updatedDiv" class="black-color bold">
-                                        @foreach (var v in Model)
-                                        {
-                                            if (v != null){}
-
-                                        }
-                                    </tbody>
-                                </table>
-
-                                <div class="clearfix"></div>
-
-                            </div>
-
-                            
-                                
-                            
-
-                            <div class="clearfix"></div>
-
-
-                        <!---->
-
-                             @*CLASS HIDDEN WILL BE USED*@ 
-
-                            <div class="" style="display:none">
-
-                                <div class="col-md-12 mt-15">
-                                    @*<section id="no-more-tables">*@
-
-                                    <div class="col-md-1"></div>
-
-                                    <div id="cash_period_before_refund" class="col-md-5 pull-left">
-
-                                        <table id="table_cash_flow" class="black-color border_black">
-                                            <tr>
-                                                <th class="">Cash flow this period (before refunds)</th>
-                                                <td class=""></td>
-                                            </tr>
-
-
-                                            <tr>
-                                                <th class="">Cash</th>
-                                                <td>£114.00</td>
-                                            </tr>
-                                            <tr>
-                                                <th class="">Credit</th>
-                                                <td>£100.00</td>
-                                            </tr>
-
-                                            <tr>
-                                                <th class="">PayPal</th>
-                                                <td>£54.00</td>
-                                            </tr>
-                                            <tr>
-                                                <th class="">Bank Transfer</th>
-                                                <td>£2000.00</td>
-                                            </tr>
-                                            <tr>
-                                                <th class="">Gross</th>
-                                                <td>£99.00</td>
-                                            </tr>
-                                        </table>
-                                    </div>
-
-
-
-                                    <div id="cash_period_after_refund" class="col-md-5 pull-left">
-
-                                        <table id="table_cash_flow" class="black-color border_black">
-                                            <tr>
-                                                <th class="">Cash flow this period (after refunds)</th>
-                                                <td class=""></td>
-                                            </tr>
-
-
-                                            <tr>
-                                                <th class="">Cash</th>
-                                                <td>£72.00</td>
-                                            </tr>
-                                            <tr>
-                                                <th class="">Credit</th>
-                                                <td>£220.00</td>
-                                            </tr>
-
-                                            <tr>
-                                                <th class="">PayPal</th>
-                                                <td>£175.00</td>
-                                            </tr>
-                                            <tr>
-                                                <th class="">Bank Transfer</th>
-                                                <td>£999.00</td>
-                                            </tr>
-                                            <tr>
-                                                <th class="">Gross</th>
-                                                <td>£456.00</td>
-                                            </tr>
-                                        </table>
-                                    </div>
-
-
-                                    <div class="col-md-1"></div>
-
-
-
-
-                                </div>
-
-                                <div class="clearfix"></div>
-
-                                <div class="col-md-12 mt-15">
-
-
-                                    <div class="col-md-1"></div>
-
-                                    <div id="total_before_refunds" class="col-md-5 pull-left">
-
-                                        <table id="table_cash_flow" class="black-color border_black">
-                                            <tr>
-                                                <th class="">Total takings this Period</th>
-                                                <td class=""></td>
-                                            </tr>
-
-
-                                            <tr>
-                                                <th class="">Invoices</th>
-                                                <td>£34.00</td>
-                                            </tr>
-                                            <tr>
-                                                <th class="">Item Sale</th>
-                                                <td>£98.00</td>
-                                            </tr>
-
-                                            <tr>
-                                                <th class="">Net</th>
-                                                <td>£321.00</td>
-                                            </tr>
-                                            <tr>
-                                                <th class="">VAT</th>
-                                                <td>£120.00</td>
-                                            </tr>
-                                            <tr>
-                                                <th class="">Gross</th>
-                                                <td>£65.00</td>
-                                            </tr>
-
-                                            <tr>
-                                                <th class="">Due</th>
-                                                <td>£10.00</td>
-                                            </tr>
-
-                                        </table>
-                                    </div>
-
-
-                                    <div id="total_after_refunds" class="col-md-5 pull-left">
-
-                                        <table id="table_cash_flow" class="black-color border_black">
-                                            <tr>
-                                                <th class="">Refunds this period</th>
-                                                <td class=""></td>
-                                            </tr>
-
-
-                                            <tr>
-                                                <th class="">Credit</th>
-                                                <td>£934.00</td>
-                                            </tr>
-
-                                            <tr>
-                                                <th class="">Cash</th>
-                                                <td>£934.00</td>
-                                            </tr>
-
-                                            <tr>
-                                                <th class="">Gross</th>
-                                                <td>£934.00</td>
-                                            </tr>
-
-                                        </table>
-                                    </div>
-
-
-                                    <div class="col-md-1"></div>
-
-                                </div>
-
-                                <div class="clearfix"></div>
-
-                            </div>
-
-                           
-
-                        </div>
+                        <div id="date_click_div" style="display:none"></div>
 
 
                     </div>
@@ -552,6 +193,7 @@
 
     <script src="~/scripts/customer_summary/customer_summary.js"></script>
     <script src="~/scripts/report/sale_report.js"></script>
+    <script src="~/Scripts/Customer/Edit_Customers.js"></script>
     @*<script src="~/Scripts/new-js/jquery-1.11.1.min.js"></script>
     <script src="~/Scripts/new-js/jquery.datatables.min.js"></script>*@
 
