--- a/Views/Sale/Edit_Sale.cshtml
+++ b/Views/Sale/Edit_Sale.cshtml
@@ -698,11 +698,11 @@
                                             <div id="global_discount_div" class="col-md-3 pull-right">
                                                 <div class="col-md-8"><a href="" class="btn btn-primary blue-btn-style btn-mini bold" data-toggle="modal" data-target="#Global_Discount_Modal">Add Global Discount</a></div>
                                             </div>
-
+                                        <!-----------------------HIDING REFUND not COMPLETED
                                             <div id="Give_Refund_Div" class="col-md-2 pull-right mr--13">
                                                 <a href="#" data-target="#Give_Refund" data-toggle="modal" class="btn btn-success blue-btn-style btn-mini bold">Give Refund</a>
                                             </div>
-
+                                            -->
 
                                     </div>
 
